--- a/peluqueria.html
+++ b/peluqueria.html
@@ -18,97 +18,95 @@
 	</head>
 	<body>
 		<!-- Navbar -->
-		<div class="container-fluid">
-			<div id="nav" class="sticky-top" style="padding-top: 10px">
-				<div class="navbar-light">
-					<div class="row">
-						<div class="col">
-							<a class="navbar-brand" href="index.html"
-								><img
-									src="img/LogoMascotaManía Blanco.png"
-									style="width: 200px; height: 77px"
-									class="img-fluid"
-									alt=""
-							/></a>
-						</div>
-						<div class="col-sm-8">
-							<div class="dir">
-								<p class="dir navBarInfo">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										x="0px"
-										y="0px"
-										width="24"
-										height="24"
-										viewBox="0 0 172 172"
-										style="fill: #000000"
+		<div id="nav" class="sticky-top" style="padding-top: 10px">
+			<div class="navbar-light">
+				<div class="row justify-content-around align-items-center">
+					<div class="col-auto">
+						<a class="navbar-brand" href="index.html"
+							><img
+								src="img/LogoMascotaManía Blanco.png"
+								class="img-fluid"
+								alt=""
+						/></a>
+					</div>
+					<div class="col-auto">
+						<div class="dir">
+							<p class="dir navBarInfo">
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									x="0px"
+									y="0px"
+									width="24"
+									height="24"
+									viewBox="0 0 172 172"
+									style="fill: #000000"
+								>
+									<g
+										fill="none"
+										fill-rule="nonzero"
+										stroke="none"
+										stroke-width="1"
+										stroke-linecap="butt"
+										stroke-linejoin="miter"
+										stroke-miterlimit="10"
+										stroke-dasharray=""
+										stroke-dashoffset="0"
+										font-family="none"
+										font-weight="none"
+										font-size="none"
+										text-anchor="none"
+										style="mix-blend-mode: normal"
 									>
-										<g
+										<path
+											d="M0,172v-172h172v172z"
 											fill="none"
-											fill-rule="nonzero"
-											stroke="none"
-											stroke-width="1"
-											stroke-linecap="butt"
-											stroke-linejoin="miter"
-											stroke-miterlimit="10"
-											stroke-dasharray=""
-											stroke-dashoffset="0"
-											font-family="none"
-											font-weight="none"
-											font-size="none"
-											text-anchor="none"
-											style="mix-blend-mode: normal"
-										>
+										></path>
+										<g fill="#ffffff">
 											<path
-												d="M0,172v-172h172v172z"
-												fill="none"
+												d="M86,14.33333c-27.70633,0 -50.16667,22.46033 -50.16667,50.16667c0,35.83333 50.16667,93.16667 50.16667,93.16667c0,0 50.16667,-57.33333 50.16667,-93.16667c0,-27.70633 -22.46033,-50.16667 -50.16667,-50.16667zM86,82.41667c-9.89717,0 -17.91667,-8.0195 -17.91667,-17.91667c0,-9.89717 8.0195,-17.91667 17.91667,-17.91667c9.89717,0 17.91667,8.0195 17.91667,17.91667c0,9.89717 -8.0195,17.91667 -17.91667,17.91667z"
 											></path>
-											<g fill="#ffffff">
-												<path
-													d="M86,14.33333c-27.70633,0 -50.16667,22.46033 -50.16667,50.16667c0,35.83333 50.16667,93.16667 50.16667,93.16667c0,0 50.16667,-57.33333 50.16667,-93.16667c0,-27.70633 -22.46033,-50.16667 -50.16667,-50.16667zM86,82.41667c-9.89717,0 -17.91667,-8.0195 -17.91667,-17.91667c0,-9.89717 8.0195,-17.91667 17.91667,-17.91667c9.89717,0 17.91667,8.0195 17.91667,17.91667c0,9.89717 -8.0195,17.91667 -17.91667,17.91667z"
-												></path>
-											</g>
 										</g>
-									</svg>
-									Alsina 41, San Isidro, Buenos Aires -
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										x="0px"
-										y="0px"
-										width="24"
-										height="24"
-										viewBox="0 0 172 172"
-										style="fill: #000000"
+									</g>
+								</svg>
+								Alsina 41, San Isidro, Buenos Aires -
+								<svg
+									xmlns="http://www.w3.org/2000/svg"
+									x="0px"
+									y="0px"
+									width="24"
+									height="24"
+									viewBox="0 0 172 172"
+									style="fill: #000000"
+								>
+									<g
+										fill="none"
+										fill-rule="nonzero"
+										stroke="none"
+										stroke-width="1"
+										stroke-linecap="butt"
+										stroke-linejoin="miter"
+										stroke-miterlimit="10"
+										stroke-dasharray=""
+										stroke-dashoffset="0"
+										font-family="none"
+										font-weight="none"
+										font-size="none"
+										text-anchor="none"
+										style="mix-blend-mode: normal"
 									>
-										<g
+										<path
+											d="M0,172v-172h172v172z"
 											fill="none"
-											fill-rule="nonzero"
-											stroke="none"
-											stroke-width="1"
-											stroke-linecap="butt"
-											stroke-linejoin="miter"
-											stroke-miterlimit="10"
-											stroke-dasharray=""
-											stroke-dashoffset="0"
-											font-family="none"
-											font-weight="none"
-											font-size="none"
-											text-anchor="none"
-											style="mix-blend-mode: normal"
-										>
+										></path>
+										<g fill="#ffffff">
 											<path
-												d="M0,172v-172h172v172z"
-												fill="none"
+												d="M113.52,17.2h-55.04v-13.76c0,-1.89469 -1.54531,-3.44 -3.44,-3.44h-10.32c-1.89469,0 -3.44,1.54531 -3.44,3.44v134.16c0,12.7925 12.02656,20.64 20.64,20.64h51.6c9.48688,0 17.2,-7.71312 17.2,-17.2v-106.64c0,-9.48687 -7.71312,-17.2 -17.2,-17.2zM65.36,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM113.52,72.24c0,3.78938 -3.09062,6.88 -6.88,6.88h-41.28c-3.78937,0 -6.88,-3.09062 -6.88,-6.88v-27.52c0,-3.78937 3.09063,-6.88 6.88,-6.88h41.28c3.78938,0 6.88,3.09063 6.88,6.88z"
 											></path>
-											<g fill="#ffffff">
-												<path
-													d="M113.52,17.2h-55.04v-13.76c0,-1.89469 -1.54531,-3.44 -3.44,-3.44h-10.32c-1.89469,0 -3.44,1.54531 -3.44,3.44v134.16c0,12.7925 12.02656,20.64 20.64,20.64h51.6c9.48688,0 17.2,-7.71312 17.2,-17.2v-106.64c0,-9.48687 -7.71312,-17.2 -17.2,-17.2zM65.36,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM113.52,72.24c0,3.78938 -3.09062,6.88 -6.88,6.88h-41.28c-3.78937,0 -6.88,-3.09062 -6.88,-6.88v-27.52c0,-3.78937 3.09063,-6.88 6.88,-6.88h41.28c3.78938,0 6.88,3.09063 6.88,6.88z"
-												></path>
-											</g>
 										</g>
-									</svg>
-									4747 - 3518 / 11 3226 - 1037
-								</p>
+									</g>
+								</svg>
+								4747 - 3518 / 11 3226 - 1037
+							</p>
 							</div>
 						</div>
 					</div>
