--- a/veterinaria.html
+++ b/veterinaria.html
@@ -20,17 +20,17 @@
 		<div class="container-fluid">
 			<!-- Navbar -->
 			<div id="nav" class="sticky-top" style="padding-top: 10px">
-				<div class="container-fluid navbar-light">
-					<div class="row">
-						<div class="col">
+				<div class="navbar-light">
+					<div class="row justify-content-around align-items-center">
+						<div class="col-auto">
 							<a class="navbar-brand" href="index.html"
 								><img
 									src="img/LogoMascotaManía Blanco.png"
-									style="width: 200px; height: 77px"
+									class="img-fluid"
 									alt=""
 							/></a>
 						</div>
-						<div class="col-sm-8">
+						<div class="col-auto">
 							<div class="dir">
 								<p class="dir navBarInfo">
 									<svg
