--- a/servicios.html
+++ b/servicios.html
@@ -19,19 +19,19 @@
 	<body>
 		<!-- Navbar -->
 		<div id="nav" class="sticky-top" style="padding-top: 10px">
-			<div class="container-fluid navbar-light">
-				<div class="row">
-					<div class="col">
+			<div class="navbar-light">
+				<div class="row justify-content-around align-items-center">
+					<div class="col-auto">
 						<a class="navbar-brand" href="index.html"
 							><img
 								src="img/LogoMascotaManía Blanco.png"
-								alt=""
 								class="img-fluid"
+								alt=""
 						/></a>
 					</div>
-					<div class="col-sm-8">
+					<div class="col-auto">
 						<div class="dir">
-							<p class="dir">
+							<p class="dir navBarInfo">
 								<svg
 									xmlns="http://www.w3.org/2000/svg"
 									x="0px"
