--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
 		<!-- Cards -->
 		<div id="cards" class="row row-cols-1 row-cols-md-3 g-4">
-			<div class="col">
+			<div class="col-auto">
 				<div class="card h-100">
 					<a href="/veterinaria.html" style="text-decoration: none">
 						<img
@@ -264,7 +264,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-auto">
 				<div class="card h-100">
 					<a href="/mascotas.html" style="text-decoration: none">
 						<img
@@ -279,7 +279,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="col">
+			<div class="col-auto">
 				<div class="card h-100">
 					<a href="/peluqueria.html" style="text-decoration: none">
 						<img
@@ -298,138 +298,102 @@
 
 		<!-- Marcas -->
 		<div id="marcas" class="rosa">
-			<h1>Marcas</h1>
+			<div class="row align-items-center justify-content-center">
+				<div class="col-auto">
+					<h1>Marcas</h1>
+				</div>
+			</div>
 			<div
 				class="row row-cols-2 row-cols-md-6 g-4 align-items-center justify-content-center"
 			>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/royal.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/purina.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/Eukanuba.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/nature.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/nutrique.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/monami.jfif" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/iams.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
 						<img src="img/marcas/gepsa.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/uniq.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/uniq.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/tcg.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/tcg.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/oldprince.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/oldprince.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/krof.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/krof.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/optimum.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/optimum.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/ferplast.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/ferplast.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/golocan.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/golocan.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/drzoo.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/drzoo.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/animalpet.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/animalpet.png" alt="..." />
 					</div>
 				</div>
-				<div class="col card">
+				<div class="col-auto card">
 					<div class="card brands h-100">
-						<img
-							src="img/marcas/per-ros.png"
-							class="card-img-top"
-							alt="..."
-						/>
+						<img src="img/marcas/per-ros.png" alt="..." />
 					</div>
 				</div>
 			</div>
