--- a/index.html
+++ b/index.html
@@ -298,103 +298,61 @@
 
 		<!-- Marcas -->
 		<div id="marcas" class="rosa">
-			<div class="row align-items-center justify-content-center">
-				<div class="col-auto">
-					<h1>Marcas</h1>
+			<h1>Marcas</h1>
+			<div class="row g-4 align-items-center justify-content-center">
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/royal.png" alt="..." />
 				</div>
-			</div>
-			<div
-				class="row row-cols-2 row-cols-md-6 g-4 align-items-center justify-content-center"
-			>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/royal.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/purina.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/purina.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/Eukanuba.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/Eukanuba.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/nature.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/nature.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/nutrique.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/nutrique.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/monami.jfif" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/monami.jfif" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/iams.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/iams.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/gepsa.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/gepsa.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/uniq.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/uniq.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/tcg.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/tcg.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/oldprince.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/oldprince.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/krof.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/krof.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/optimum.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/optimum.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/ferplast.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/ferplast.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/golocan.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/golocan.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/drzoo.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/drzoo.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/animalpet.png" alt="..." />
 				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/animalpet.png" alt="..." />
-					</div>
-				</div>
-				<div class="col card">
-					<div class="card brands h-100">
-						<img src="img/marcas/per-ros.png" alt="..." />
-					</div>
+				<div class="col-auto brands card h-100">
+					<img src="img/marcas/per-ros.png" alt="..." />
 				</div>
 			</div>
 		</div>
