--- a/roedores.html
+++ b/roedores.html
@@ -252,12 +252,12 @@
 		<div class="cards">
 			<div class="whiteBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Alimentos</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="alimentosLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
@@ -310,12 +310,12 @@
 			</div>
 			<div class="pinkBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Accesorios</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="accesoriosLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
@@ -379,12 +379,12 @@
 			</div>
 			<div class="whiteBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Hamsteras</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="hamsterasLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
