--- a/veterinaria.html
+++ b/veterinaria.html
@@ -263,9 +263,9 @@
 					- Consultorio<br />
 					- Análisis Clínicos<br />
 					- Aplicación de Chips<br />
-					- Cirugías (programadas)<br />
-					- Estudios Cardiológicos (programadas)<br />
-					- Ecografías (programadas)<br />
+					- Cirugías (programados)<br />
+					- Estudios Cardiológicos (programados)<br />
+					- Ecografías (programados)<br />
 					<br />
 					Horario: Lunes, Miércoles y Viernes de 10 a 19hs / Martes y
 					Jueves de 10 a 17hs.<br />
@@ -278,7 +278,7 @@
 			<!-- Farmacia -->
 			<div class="rosa">
 				<div>
-					<h1>Farmacias</h1>
+					<h1>Farmacia</h1>
 					<p class="info">
 						En Mascotamania Alsina contamos con una gran variedad de
 						medicamentos para tu mascota. Nuestros veterinarios se
