--- a/gatos.html
+++ b/gatos.html
@@ -252,12 +252,12 @@
 		<div class="cards">
 			<div class="whiteBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Alimentos Secos</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="secosLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
@@ -320,11 +320,13 @@
 				</div>
 			</div>
 			<div class="pinkBackground">
-				<div class="row justify-content-between cardsHeaders">
+				<div
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
+				>
 					<div class="col-auto">
 						<h1>Alimentos Húmedos</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="humedosLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
@@ -377,12 +379,12 @@
 			</div>
 			<div class="whiteBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Snaks</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="snaksLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
@@ -424,12 +426,12 @@
 			</div>
 			<div class="pinkBackground">
 				<div
-					class="row justify-content-between align-items-center cardsHeaders"
+					class="row justify-content-md-around justify-content-center align-items-center cardsHeaders"
 				>
 					<div class="col-auto">
 						<h1>Accesorios</h1>
 					</div>
-					<div class="col-auto">
+					<div class="col-auto ms-3 ms-md-0">
 						<button id="accesoriosLeftButton" class="buttons">
 							<img
 								src="img/leftButton.PNG"
