--- a/index.html
+++ b/index.html
@@ -455,29 +455,34 @@
 			>
 				<div class="row justify-content-around align-items-center">
 					<div class="col-auto">
-						<label id="name">Nombre</label>
+						<label for="name" id="name">Nombre</label>
 					</div>
 					<div class="col-auto">
-						<label id="email">Mail</label>
+						<label for="email" id="email">Mail</label>
 					</div>
 					<div class="col-auto">
-						<label id="celular">Celular</label>
+						<label for="celular" id="celular">Celular</label>
 					</div>
 				</div>
 				<div class="row justify-content-around align-items-center mb-4">
 					<div class="col-auto">
-						<input type="text" name="name" />
+						<input type="text" name="name" id="inputNombre" />
 					</div>
 					<div class="col-auto">
-						<input type="email" name="email" />
+						<input type="email" name="email" id="inputEmail" />
 					</div>
 					<div class="col-auto">
-						<input type="text" name="celular" cols />
+						<input
+							type="text"
+							name="celular"
+							id="inputCelular"
+							cols
+						/>
 					</div>
 				</div>
 				<div class="row justify-content-center">
 					<div class="col-auto">
-						<label id="message">Mensaje</label>
+						<label for="message">Mensaje</label>
 					</div>
 				</div>
 				<div class="row mb-2 justify-content-center">
