--- a/veterinaria.html
+++ b/veterinaria.html
@@ -69,7 +69,12 @@
 											</g>
 										</g>
 									</svg>
-									Alsina 41, San Isidro, Buenos Aires -
+
+									Alsina 41, San Isidro, Buenos Aires
+								</p>
+							</div>
+							<div class="col-auto whiteletters">
+								<p>
 									<svg
 										xmlns="http://www.w3.org/2000/svg"
 										x="0px"
@@ -111,139 +116,134 @@
 							</div>
 						</div>
 					</div>
-					<nav class="navbar navbar-expand-lg navbar-light">
-						<div class="container-fluid">
-							<button
-								class="navbar-toggler"
-								type="button"
-								data-bs-toggle="collapse"
-								data-bs-target="#navbarSupportedContent"
-								aria-controls="navbarSupportedContent"
-								aria-expanded="false"
-								aria-label="Toggle navigation"
+				</div>
+				<nav class="navbar navbar-expand-lg navbar-dark row">
+					<button
+						class="navbar-toggler ms-2 col-auto"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse row"
+						id="navbarSupportedContent"
+					>
+						<ul
+							class="navbar-nav mb-2 mb-lg-0 ms-2 ms-lg-0 justify-content-lg-around col-auto col-lg-12"
+						>
+							<li
+								class="nav-item dropdown col-auto"
+								style="text-align: center"
 							>
-								<span class="navbar-toggler-icon"></span>
-							</button>
-							<div
-								class="collapse navbar-collapse row"
-								id="navbarSupportedContent"
-								style="justify-content: space-between"
-							>
-								<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-									<li
-										class="nav-item dropdown col-3"
-										style="text-align: center"
-									>
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-bs-toggle="dropdown"
+									aria-expanded="false"
+								>
+									Mascotas
+								</a>
+								<ul
+									class="dropdown-menu"
+									aria-labelledby="navbarDropdown"
+								>
+									<li>
 										<a
-											class="nav-link dropdown-toggle"
-											href="#"
-											id="navbarDropdown"
-											role="button"
-											data-bs-toggle="dropdown"
-											aria-expanded="false"
-										>
-											Mascotas
-										</a>
-										<ul
-											class="dropdown-menu"
-											aria-labelledby="navbarDropdown"
-										>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="perros.html"
-													>Perros</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="gatos.html"
-													>Gatos</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="roedores.html"
-													>Roedores</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="aves.html"
-													>Aves</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="peces.html"
-													>Peces</a
-												>
-											</li>
-										</ul>
-									</li>
-									<li
-										class="nav-item col-3"
-										style="text-align: center"
-									>
-										<a
-											class="nav-link"
-											href="index.html#marcas"
-											>Marcas</a
+											class="dropdown-item menu"
+											href="perros.html"
+											>Perros</a
 										>
 									</li>
-									<li
-										class="nav-item dropdown col-3"
-										style="text-align: center"
-									>
+									<li>
 										<a
-											class="nav-link dropdown-toggle"
-											href="#"
-											id="navbarDropdown"
-											role="button"
-											data-bs-toggle="dropdown"
-											aria-expanded="false"
+											class="dropdown-item menu"
+											href="gatos.html"
+											>Gatos</a
 										>
-											Servicios
-										</a>
-										<ul
-											class="dropdown-menu"
-											aria-labelledby="navbarDropdown"
-										>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="veterinaria.html"
-													>Veterinaria</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="peluqueria.html"
-													>Peluqueria</a
-												>
-											</li>
-										</ul>
 									</li>
-									<li
-										class="nav-item col-3"
-										style="text-align: center"
-									>
+									<li>
 										<a
-											class="nav-link"
-											href="index.html#contacto"
-											>Contacto</a
+											class="dropdown-item menu"
+											href="roedores.html"
+											>Roedores</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="aves.html"
+											>Aves</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="peces.html"
+											>Peces</a
 										>
 									</li>
 								</ul>
-							</div>
-						</div>
-					</nav>
-				</div>
+							</li>
+							<li
+								class="nav-item col-auto"
+								style="text-align: center"
+							>
+								<a class="nav-link" href="index.html#marcas"
+									>Marcas</a
+								>
+							</li>
+							<li
+								class="nav-item dropdown col-auto"
+								style="text-align: center"
+							>
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-bs-toggle="dropdown"
+									aria-expanded="false"
+								>
+									Servicios
+								</a>
+								<ul
+									class="dropdown-menu"
+									aria-labelledby="navbarDropdown"
+								>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="veterinaria.html"
+											>Veterinaria</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="peluqueria.html"
+											>Peluqueria</a
+										>
+									</li>
+								</ul>
+							</li>
+							<li
+								class="nav-item col-auto"
+								style="text-align: center"
+							>
+								<a class="nav-link" href="index.html#contacto"
+									>Contacto</a
+								>
+							</li>
+						</ul>
+					</div>
+				</nav>
 			</div>
 			<div id="nav" style="height: 189px">
 				<h3 style="color: whitesmoke; padding-top: 10px">
