--- a/peluqueria.html
+++ b/peluqueria.html
@@ -17,232 +17,233 @@
 		<title>MascotaMania</title>
 	</head>
 	<body>
-		<!-- Navbar -->
-		<div id="nav" class="sticky-top" style="padding-top: 10px">
-			<div class="navbar-light">
-				<div class="row justify-content-around align-items-center">
-					<div class="col-auto">
-						<a class="navbar-brand" href="index.html"
-							><img
-								src="img/LogoMascotaManía Blanco.png"
-								class="img-fluid"
-								alt=""
-						/></a>
-					</div>
-					<div class="col-auto">
-						<div class="dir">
-							<p class="dir navBarInfo">
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									x="0px"
-									y="0px"
-									width="24"
-									height="24"
-									viewBox="0 0 172 172"
-									style="fill: #000000"
-								>
-									<g
-										fill="none"
-										fill-rule="nonzero"
-										stroke="none"
-										stroke-width="1"
-										stroke-linecap="butt"
-										stroke-linejoin="miter"
-										stroke-miterlimit="10"
-										stroke-dasharray=""
-										stroke-dashoffset="0"
-										font-family="none"
-										font-weight="none"
-										font-size="none"
-										text-anchor="none"
-										style="mix-blend-mode: normal"
+		<div class="container-fluid">
+			<!-- Navbar -->
+			<div id="nav" class="sticky-top" style="padding-top: 10px">
+				<div class="navbar-light">
+					<div class="row justify-content-around align-items-center">
+						<div class="col-auto">
+							<a class="navbar-brand" href="index.html"
+								><img
+									src="img/LogoMascotaManía Blanco.png"
+									class="img-fluid"
+									alt=""
+							/></a>
+						</div>
+						<div class="col-auto">
+							<div class="dir">
+								<p class="dir navBarInfo">
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										x="0px"
+										y="0px"
+										width="24"
+										height="24"
+										viewBox="0 0 172 172"
+										style="fill: #000000"
 									>
-										<path
-											d="M0,172v-172h172v172z"
+										<g
 											fill="none"
-										></path>
-										<g fill="#ffffff">
+											fill-rule="nonzero"
+											stroke="none"
+											stroke-width="1"
+											stroke-linecap="butt"
+											stroke-linejoin="miter"
+											stroke-miterlimit="10"
+											stroke-dasharray=""
+											stroke-dashoffset="0"
+											font-family="none"
+											font-weight="none"
+											font-size="none"
+											text-anchor="none"
+											style="mix-blend-mode: normal"
+										>
 											<path
-												d="M86,14.33333c-27.70633,0 -50.16667,22.46033 -50.16667,50.16667c0,35.83333 50.16667,93.16667 50.16667,93.16667c0,0 50.16667,-57.33333 50.16667,-93.16667c0,-27.70633 -22.46033,-50.16667 -50.16667,-50.16667zM86,82.41667c-9.89717,0 -17.91667,-8.0195 -17.91667,-17.91667c0,-9.89717 8.0195,-17.91667 17.91667,-17.91667c9.89717,0 17.91667,8.0195 17.91667,17.91667c0,9.89717 -8.0195,17.91667 -17.91667,17.91667z"
+												d="M0,172v-172h172v172z"
+												fill="none"
 											></path>
+											<g fill="#ffffff">
+												<path
+													d="M86,14.33333c-27.70633,0 -50.16667,22.46033 -50.16667,50.16667c0,35.83333 50.16667,93.16667 50.16667,93.16667c0,0 50.16667,-57.33333 50.16667,-93.16667c0,-27.70633 -22.46033,-50.16667 -50.16667,-50.16667zM86,82.41667c-9.89717,0 -17.91667,-8.0195 -17.91667,-17.91667c0,-9.89717 8.0195,-17.91667 17.91667,-17.91667c9.89717,0 17.91667,8.0195 17.91667,17.91667c0,9.89717 -8.0195,17.91667 -17.91667,17.91667z"
+												></path>
+											</g>
 										</g>
-									</g>
-								</svg>
-								Alsina 41, San Isidro, Buenos Aires -
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									x="0px"
-									y="0px"
-									width="24"
-									height="24"
-									viewBox="0 0 172 172"
-									style="fill: #000000"
-								>
-									<g
-										fill="none"
-										fill-rule="nonzero"
-										stroke="none"
-										stroke-width="1"
-										stroke-linecap="butt"
-										stroke-linejoin="miter"
-										stroke-miterlimit="10"
-										stroke-dasharray=""
-										stroke-dashoffset="0"
-										font-family="none"
-										font-weight="none"
-										font-size="none"
-										text-anchor="none"
-										style="mix-blend-mode: normal"
+									</svg>
+
+									Alsina 41, San Isidro, Buenos Aires
+								</p>
+							</div>
+							<div class="col-auto whiteletters">
+								<p>
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										x="0px"
+										y="0px"
+										width="24"
+										height="24"
+										viewBox="0 0 172 172"
+										style="fill: #000000"
 									>
-										<path
-											d="M0,172v-172h172v172z"
+										<g
 											fill="none"
-										></path>
-										<g fill="#ffffff">
+											fill-rule="nonzero"
+											stroke="none"
+											stroke-width="1"
+											stroke-linecap="butt"
+											stroke-linejoin="miter"
+											stroke-miterlimit="10"
+											stroke-dasharray=""
+											stroke-dashoffset="0"
+											font-family="none"
+											font-weight="none"
+											font-size="none"
+											text-anchor="none"
+											style="mix-blend-mode: normal"
+										>
 											<path
-												d="M113.52,17.2h-55.04v-13.76c0,-1.89469 -1.54531,-3.44 -3.44,-3.44h-10.32c-1.89469,0 -3.44,1.54531 -3.44,3.44v134.16c0,12.7925 12.02656,20.64 20.64,20.64h51.6c9.48688,0 17.2,-7.71312 17.2,-17.2v-106.64c0,-9.48687 -7.71312,-17.2 -17.2,-17.2zM65.36,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM113.52,72.24c0,3.78938 -3.09062,6.88 -6.88,6.88h-41.28c-3.78937,0 -6.88,-3.09062 -6.88,-6.88v-27.52c0,-3.78937 3.09063,-6.88 6.88,-6.88h41.28c3.78938,0 6.88,3.09063 6.88,6.88z"
+												d="M0,172v-172h172v172z"
+												fill="none"
 											></path>
+											<g fill="#ffffff">
+												<path
+													d="M113.52,17.2h-55.04v-13.76c0,-1.89469 -1.54531,-3.44 -3.44,-3.44h-10.32c-1.89469,0 -3.44,1.54531 -3.44,3.44v134.16c0,12.7925 12.02656,20.64 20.64,20.64h51.6c9.48688,0 17.2,-7.71312 17.2,-17.2v-106.64c0,-9.48687 -7.71312,-17.2 -17.2,-17.2zM65.36,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM65.36,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM86,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,144.48c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,123.84c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM106.64,103.2c-3.80281,0 -6.88,-3.07719 -6.88,-6.88c0,-3.80281 3.07719,-6.88 6.88,-6.88c3.80281,0 6.88,3.07719 6.88,6.88c0,3.80281 -3.07719,6.88 -6.88,6.88zM113.52,72.24c0,3.78938 -3.09062,6.88 -6.88,6.88h-41.28c-3.78937,0 -6.88,-3.09062 -6.88,-6.88v-27.52c0,-3.78937 3.09063,-6.88 6.88,-6.88h41.28c3.78938,0 6.88,3.09063 6.88,6.88z"
+												></path>
+											</g>
 										</g>
-									</g>
-								</svg>
-								4747 - 3518 / 11 3226 - 1037
-							</p>
+									</svg>
+									4747 - 3518 / 11 3226 - 1037
+								</p>
 							</div>
 						</div>
 					</div>
-					<nav class="navbar navbar-expand-lg navbar-light">
-						<div class="container-fluid">
-							<button
-								class="navbar-toggler"
-								type="button"
-								data-bs-toggle="collapse"
-								data-bs-target="#navbarSupportedContent"
-								aria-controls="navbarSupportedContent"
-								aria-expanded="false"
-								aria-label="Toggle navigation"
+				</div>
+				<nav class="navbar navbar-expand-lg navbar-dark row">
+					<button
+						class="navbar-toggler ms-2 col-auto"
+						type="button"
+						data-bs-toggle="collapse"
+						data-bs-target="#navbarSupportedContent"
+						aria-controls="navbarSupportedContent"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+					<div
+						class="collapse navbar-collapse row"
+						id="navbarSupportedContent"
+					>
+						<ul
+							class="navbar-nav mb-2 mb-lg-0 ms-2 ms-lg-0 justify-content-lg-around col-auto col-lg-12"
+						>
+							<li
+								class="nav-item dropdown col-auto"
+								style="text-align: center"
 							>
-								<span class="navbar-toggler-icon"></span>
-							</button>
-							<div
-								class="collapse navbar-collapse row"
-								id="navbarSupportedContent"
-								style="justify-content: space-between"
-							>
-								<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-									<li
-										class="nav-item dropdown col-3"
-										style="text-align: center"
-									>
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-bs-toggle="dropdown"
+									aria-expanded="false"
+								>
+									Mascotas
+								</a>
+								<ul
+									class="dropdown-menu"
+									aria-labelledby="navbarDropdown"
+								>
+									<li>
 										<a
-											class="nav-link dropdown-toggle"
-											href="#"
-											id="navbarDropdown"
-											role="button"
-											data-bs-toggle="dropdown"
-											aria-expanded="false"
-										>
-											Mascotas
-										</a>
-										<ul
-											class="dropdown-menu"
-											aria-labelledby="navbarDropdown"
-										>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="perros.html"
-													>Perros</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="gatos.html"
-													>Gatos</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="roedores.html"
-													>Roedores</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="aves.html"
-													>Aves</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="peces.html"
-													>Peces</a
-												>
-											</li>
-										</ul>
-									</li>
-									<li
-										class="nav-item col-3"
-										style="text-align: center"
-									>
-										<a
-											class="nav-link"
-											href="index.html#marcas"
-											>Marcas</a
+											class="dropdown-item menu"
+											href="perros.html"
+											>Perros</a
 										>
 									</li>
-									<li
-										class="nav-item dropdown col-3"
-										style="text-align: center"
-									>
+									<li>
 										<a
-											class="nav-link dropdown-toggle"
-											href="#"
-											id="navbarDropdown"
-											role="button"
-											data-bs-toggle="dropdown"
-											aria-expanded="false"
+											class="dropdown-item menu"
+											href="gatos.html"
+											>Gatos</a
 										>
-											Servicios
-										</a>
-										<ul
-											class="dropdown-menu"
-											aria-labelledby="navbarDropdown"
-										>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="veterinaria.html"
-													>Veterinaria</a
-												>
-											</li>
-											<li>
-												<a
-													class="dropdown-item menu"
-													href="peluqueria.html"
-													>Peluqueria</a
-												>
-											</li>
-										</ul>
 									</li>
-									<li
-										class="nav-item col-3"
-										style="text-align: center"
-									>
+									<li>
 										<a
-											class="nav-link"
-											href="index.html#contacto"
-											>Contacto</a
+											class="dropdown-item menu"
+											href="roedores.html"
+											>Roedores</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="aves.html"
+											>Aves</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="peces.html"
+											>Peces</a
 										>
 									</li>
 								</ul>
-							</div>
-						</div>
-					</nav>
-				</div>
+							</li>
+							<li
+								class="nav-item col-auto"
+								style="text-align: center"
+							>
+								<a class="nav-link" href="index.html#marcas"
+									>Marcas</a
+								>
+							</li>
+							<li
+								class="nav-item dropdown col-auto"
+								style="text-align: center"
+							>
+								<a
+									class="nav-link dropdown-toggle"
+									href="#"
+									id="navbarDropdown"
+									role="button"
+									data-bs-toggle="dropdown"
+									aria-expanded="false"
+								>
+									Servicios
+								</a>
+								<ul
+									class="dropdown-menu"
+									aria-labelledby="navbarDropdown"
+								>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="veterinaria.html"
+											>Veterinaria</a
+										>
+									</li>
+									<li>
+										<a
+											class="dropdown-item menu"
+											href="peluqueria.html"
+											>Peluqueria</a
+										>
+									</li>
+								</ul>
+							</li>
+							<li
+								class="nav-item col-auto"
+								style="text-align: center"
+							>
+								<a class="nav-link" href="index.html#contacto"
+									>Contacto</a
+								>
+							</li>
+						</ul>
+					</div>
+				</nav>
 			</div>
 			<div id="nav" style="height: 189px">
 				<h3 style="color: whitesmoke; padding-top: 10px">Peluquería</h3>
@@ -319,6 +320,7 @@
 				<div class="clearfix"></div>
 			</div>
 		</div>
+
 		<script src="js/main.js"></script>
 
 		<!-- Bootstrap Bundle with Popper -->
