--- a/aves.html
+++ b/aves.html
@@ -371,7 +371,7 @@
 				</div>
 			</div>
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
