--- a/index.html
+++ b/index.html
@@ -528,68 +528,59 @@
 						</div>
 					</div>
 				</form>
-
-				<!-- Footer -->
-				<div class="rosa" style="padding: 25px !important">
-					<div class="logo">
-						<img
-							id="footer"
-							src="img/LogoMascotaManía.png"
-							style="
-								width: 150px;
-								height: auto;
-								margin-bottom: 10px;
-							"
-							alt=""
-						/>
-						<a
-							href="https://www.instagram.com/mascotamania.alsina41/?hl=es-la"
-							><img
-								src="https://img.icons8.com/ios-glyphs/36/000000/instagram-new.png"
-						/></a>
-						<a
-							href="https://www.youtube.com/channel/UCWL3eiuqkTCPHG4q8HcV7HQ"
-							><img
-								src="https://img.icons8.com/ios-glyphs/36/000000/youtube-play.png"
-						/></a>
-					</div>
-					<div class="seccion">
-						<a type="button" href="mascotas.html"
-							><h3>Mascotas</h3></a
-						>
-						<p>
-							Perros<br />Gatos<br />Roedores<br />Aves<br />Peces
-						</p>
-					</div>
-					<div class="seccion">
-						<a type="button" href="index.html#marcas"
-							><h3>Marcas</h3></a
-						>
-						<p>
-							Royal Canin<br />Purina<br />Vital Can<br />Eukanuba<br />Old
-							Prince
-						</p>
-					</div>
-					<div class="seccion">
-						<a type="button" href="servicios.html"
-							><h3>Servicios</h3></a
-						>
-						<p>
-							Veterinaria<br />Peluquería<br />Farmacia<br />Análisis
-							Clínicos<br />Cirugías
-						</p>
-					</div>
-					<div class="seccion">
-						<a type="button" href="index.html#contacto"
-							><h3>Contacto</h3></a
-						>
-						<p>
-							Atención Telefónica:<br />4747 - 3518<br />Atencion
-							Whatsapp:<br />+54 11 3226 1037
-						</p>
-					</div>
-					<div class="clearfix"></div>
+			</div>
+			<!-- Footer -->
+			<div class="rosa padFooter" style="padding: 20px !important">
+				<div class="logo">
+					<img
+						id="footer"
+						src="img/LogoMascotaManía.png"
+						style="width: 150px; height: auto; margin-bottom: 10px"
+						alt=""
+					/>
+					<a
+						href="https://www.instagram.com/mascotamania.alsina41/?hl=es-la"
+						><img
+							src="https://img.icons8.com/ios-glyphs/36/000000/instagram-new.png"
+					/></a>
+					<a
+						href="https://www.youtube.com/channel/UCWL3eiuqkTCPHG4q8HcV7HQ"
+						><img
+							src="https://img.icons8.com/ios-glyphs/36/000000/youtube-play.png"
+					/></a>
 				</div>
+				<div class="seccion">
+					<a type="button" href="mascotas.html"><h3>Mascotas</h3></a>
+					<p>Perros<br />Gatos<br />Roedores<br />Aves<br />Peces</p>
+				</div>
+				<div class="seccion">
+					<a type="button" href="index.html#marcas"
+						><h3>Marcas</h3></a
+					>
+					<p>
+						Royal Canin<br />Purina<br />Vital Can<br />Eukanuba<br />Old
+						Prince
+					</p>
+				</div>
+				<div class="seccion">
+					<a type="button" href="servicios.html"
+						><h3>Servicios</h3></a
+					>
+					<p>
+						Veterinaria<br />Peluquería<br />Farmacia<br />Análisis
+						Clínicos<br />Cirugías
+					</p>
+				</div>
+				<div class="seccion">
+					<a type="button" href="index.html#contacto"
+						><h3>Contacto</h3></a
+					>
+					<p>
+						Atención Telefónica:<br />4747 - 3518<br />Atencion
+						Whatsapp:<br />+54 11 3226 1037
+					</p>
+				</div>
+				<div class="clearfix"></div>
 			</div>
 		</div>
 		<script src="js/main.js"></script>
