--- a/mascotas.html
+++ b/mascotas.html
@@ -330,7 +330,7 @@
 			</div>
 
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
