--- a/peces.html
+++ b/peces.html
@@ -394,7 +394,7 @@
 			</div>
 
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
