--- a/peluqueria.html
+++ b/peluqueria.html
@@ -267,7 +267,7 @@
 			</div>
 
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
