--- a/veterinaria.html
+++ b/veterinaria.html
@@ -289,7 +289,7 @@
 			</div>
 
 			<!-- Footer -->
-			<div class="rosa" style="padding: 25px">
+			<div class="rosa" style="padding: 25px !important">
 				<div class="logo">
 					<img
 						id="footer"
